--- a/app/src/main/res/layout/activity_calculator_page.xml
+++ b/app/src/main/res/layout/activity_calculator_page.xml
@@ -12,23 +12,186 @@
     android:paddingBottom="16dp"
     tools:context=".MainActivity">
 
-    <RadioGroup
-        android:layout_width="match_parent"
+    <GridLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <RadioButton android:id="@+id/male_radio"
+        android:rowCount="6"
+        android:columnCount="2"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/gridLayout">
+
+        <TextView
+            android:text="@string/app_name"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:background="@color/cardview_dark_background"
+            android:layout_height="30dp"
+            android:layout_width="match_parent"
+            android:textAllCaps="true"
+
+            />
+
+        <RadioGroup
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="10dp"
+            android:id="@+id/radioGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/male_text"
-            android:textColor="@color/white"/>
+            android:layout_row="1"
+            android:layout_column="0"
+            android:orientation="horizontal">
 
-        <RadioButton
-            android:layout_marginLeft="10dp"
-            android:id="@+id/female_radio"
-            android:layout_width="wrap_content"
+            <RadioButton
+                android:id="@+id/maleButton"
+                android:layout_width="160dp"
+                android:layout_height="180dp"
+                android:background="@drawable/male"
+                />
+
+            <RadioButton
+                android:id="@+id/femaleButton"
+                android:layout_width="160dp"
+                android:layout_height="180dp"
+                android:background="@drawable/female" />
+        </RadioGroup>
+
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/female_text"
-            android:textColor="@color/white" />
-    </RadioGroup>
+            android:layout_row="2"
+            android:layout_column="0"
+            android:layout_marginTop="10dp"
+            android:text="@string/height_text"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            />
 
+        <TextView
+            android:id="@+id/sliderHeightText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:layout_marginTop="10dp"
+            android:text="@string/cm_text"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            />
+
+        <com.google.android.material.slider.Slider
+            android:id="@+id/slider"
+            android:valueFrom="120"
+            android:valueTo="220"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_row="4"
+            android:layout_column="0" />
+
+    </GridLayout>
+
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="180dp">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_marginStart="20dp"
+            app:cardBackgroundColor="#2D1447"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="0dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/kg_weight_text"
+                android:textAlignment="center"
+                android:textColor="#A5BDB3"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:layout_marginTop="30dp"
+                android:text="@string/weight_count"/>
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/plus"
+                android:layout_marginStart="80dp"
+                android:layout_marginTop="80dp"
+                android:id="@+id/plusSignForWeight"
+                />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/minus"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="80dp"
+                android:id="@+id/minusSignForWeight"
+                />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_marginStart="20dp"
+            app:cardBackgroundColor="#2D1447"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="0dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/age_text"
+                android:textAlignment="center"
+                android:textColor="#A5BDB3"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:layout_marginTop="30dp"
+                android:text="@string/age_count"/>
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/plus"
+                android:layout_marginStart="80dp"
+                android:layout_marginTop="80dp"
+                android:id="@+id/plusSignForAge"/>
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/minus"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="80dp"
+                android:id="@+id/minusSignForAge" />
+        </androidx.cardview.widget.CardView>
+
+
+    </GridLayout>
 </RelativeLayout>
