--- a/app/src/main/res/layout/activity_calculator_page.xml
+++ b/app/src/main/res/layout/activity_calculator_page.xml
@@ -42,14 +42,15 @@
             android:orientation="horizontal">
 
             <RadioButton
-                android:id="@+id/maleButton"
+                android:id="@+id/maleRadioButton"
                 android:layout_width="160dp"
                 android:layout_height="180dp"
                 android:background="@drawable/male"
+                android:checked="true"
                 />
 
             <RadioButton
-                android:id="@+id/femaleButton"
+                android:id="@+id/femaleRadioButton"
                 android:layout_width="160dp"
                 android:layout_height="180dp"
                 android:background="@drawable/female" />
@@ -119,6 +120,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/user_weight"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="30sp"
@@ -130,18 +132,20 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/plus"
-                android:layout_marginStart="80dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="80dp"
                 android:id="@+id/plusSignForWeight"
+                android:onClick="addWeight"
                 />
 
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/minus"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="80dp"
                 android:layout_marginTop="80dp"
                 android:id="@+id/minusSignForWeight"
+                android:onClick="minusWeight"
                 />
 
         </androidx.cardview.widget.CardView>
@@ -173,25 +177,39 @@
                 android:textSize="30sp"
                 android:textStyle="bold"
                 android:layout_marginTop="30dp"
-                android:text="@string/age_count"/>
+                android:text="@string/age_count"
+                android:id="@+id/user_age"/>
 
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/plus"
-                android:layout_marginStart="80dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="80dp"
-                android:id="@+id/plusSignForAge"/>
+                android:id="@+id/plusSignForAge"
+                android:onClick="addAge"/>
 
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/minus"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="80dp"
                 android:layout_marginTop="80dp"
-                android:id="@+id/minusSignForAge" />
+                android:id="@+id/minusSignForAge"
+                android:onClick="minusAge"/>
         </androidx.cardview.widget.CardView>
 
-
     </GridLayout>
+
+    <Button
+        android:layout_height="80dp"
+        android:layout_width="220dp"
+        android:textSize="25sp"
+        android:layout_marginBottom="30dp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:text="@string/calculate_button"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:onClick="resultPage"/>
 </RelativeLayout>
