--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,45 +12,23 @@
     android:paddingBottom="16dp"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_text"
-        android:textAlignment="center"
-        android:layout_alignParentTop="true"
-        android:textColor="@android:color/holo_blue_light"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        android:layout_marginTop="30dp"/>
-
     <ImageView
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="150dp"
         android:src="@drawable/bmi_logo"
-        android:textAlignment="center"
-        />
+        android:id="@+id/bmi_logo"
+        android:layout_centerVertical="true" />
 
     <TextView
-        android:id="@+id/continue_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/hello_text"
+        android:textAlignment="center"
+        android:textColor="@android:color/holo_blue_light"
+        android:textSize="40sp"
+        android:textStyle="bold"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="500dp"
-        android:text="@string/continue_text"
-        android:textColor="#00BCD4"
-        android:textSize="35sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/next_button"
-        android:layout_width="200dp"
-        android:layout_height="75dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="600dp"
-        android:text="@string/next_button"
-        android:textSize="25sp"
-        android:textStyle="bold" />
-
+        android:layout_below="@+id/bmi_logo"/>
 </RelativeLayout>
