--- a/app/src/main/res/drawable/male_female_selected.xml
+++ b/app/src/main/res/drawable/male_female_selected.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <solid
-        android:color="#36666C">
+        android:color="#5C3683">
     </solid>
 
     <corners android:radius="15dp">
