--- a/app/src/main/res/layout/activity_calculator_page.xml
+++ b/app/src/main/res/layout/activity_calculator_page.xml
@@ -118,7 +118,8 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/upper_layout"
         android:id="@+id/weight_age_layout"
-        android:layout_marginTop="20dp" >
+        android:layout_marginTop="40dp" >
+
 
         <androidx.cardview.widget.CardView
             android:layout_width="150dp"
@@ -143,7 +144,7 @@
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
-                <TextView
+                <EditText
                     android:id="@+id/user_weight"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -152,7 +153,9 @@
                     android:textSize="30sp"
                     android:textStyle="bold"
                     android:layout_marginTop="30dp"
-                    android:text="@string/weight_count" />
+                    android:text="@string/weight_count"
+                    android:maxLength="4"
+                    android:inputType="numberDecimal"/>
 
                 <ImageView
                     android:layout_width="50dp"
@@ -197,7 +200,7 @@
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
-                <TextView
+                <EditText
                     android:id="@+id/user_age"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -206,7 +209,9 @@
                     android:textSize="30sp"
                     android:textStyle="bold"
                     android:layout_marginTop="30dp"
-                    android:text="@string/age_count" />
+                    android:text="@string/age_count"
+                    android:inputType="number"
+                    android:maxLength="3"/>
 
                 <ImageView
                     android:layout_width="50dp"
