--- a/app/src/main/res/layout/activity_result_page.xml
+++ b/app/src/main/res/layout/activity_result_page.xml
@@ -14,7 +14,8 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/upper_layout">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -72,9 +73,115 @@
                 android:textSize="50sp"
                 android:textStyle="bold"
                 android:id="@+id/displayStatus"
-                android:layout_marginRight="20dp"/>
+                android:layout_marginEnd="20dp"/>
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/upper_layout"
+        android:id="@+id/lower_layout">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/height_label"
+            android:layout_marginTop="50dp"
+            android:textColor="@color/white"
+            android:textSize="35sp"
+            android:textStyle="bold"
+            android:layout_marginStart="20dp"/>
+
+        <androidx.cardview.widget.CardView
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="50dp"
+            android:layout_width="200dp"
+            android:layout_height="65dp"
+            app:cardCornerRadius="15dp"
+            app:cardBackgroundColor="#096671">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/height_starter_value"
+                android:textColor="@color/white"
+                android:textAlignment="center"
+                android:textSize="50sp"
+                android:textStyle="bold"
+                android:id="@+id/display_height"/>
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/weight_label"
+            android:layout_marginTop="150dp"
+            android:textColor="@color/white"
+            android:textSize="35sp"
+            android:textStyle="bold"
+            android:layout_marginStart="20dp"/>
+
+        <androidx.cardview.widget.CardView
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="150dp"
+            android:layout_width="200dp"
+            android:layout_height="65dp"
+            app:cardCornerRadius="15dp"
+            app:cardBackgroundColor="#096671">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/weight_starter_value"
+                android:textColor="@color/white"
+                android:textAlignment="center"
+                android:textSize="50sp"
+                android:textStyle="bold"
+                android:id="@+id/display_weight"/>
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/age_label"
+            android:layout_marginTop="250dp"
+            android:textColor="@color/white"
+            android:textSize="35sp"
+            android:textStyle="bold"
+            android:layout_marginStart="20dp"/>
+
+        <androidx.cardview.widget.CardView
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="250dp"
+            android:layout_width="200dp"
+            android:layout_height="65dp"
+            app:cardCornerRadius="15dp"
+            app:cardBackgroundColor="#096671">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/age_starter_value"
+                android:textColor="@color/white"
+                android:textAlignment="center"
+                android:textSize="50sp"
+                android:textStyle="bold"
+                android:id="@+id/display_age"/>
+        </androidx.cardview.widget.CardView>
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/calculate_again"
+        android:layout_width="280dp"
+        android:layout_height="80dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/lower_layout"
+        android:text="@string/another_calculation_button"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:layout_marginTop="30dp"
+        android:textAlignment="center"
+        android:backgroundTint="#2D1447"
+        android:textColor="@color/white" />
 </RelativeLayout>
