--- a/app/src/main/res/layout/activity_result_page.xml
+++ b/app/src/main/res/layout/activity_result_page.xml
@@ -20,7 +20,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/josenfin_text"
+            android:fontFamily="@font/josenfin_font"
             android:text="@string/bmi_label"
             android:textColor="@color/white"
             android:textSize="25sp"
@@ -44,7 +44,9 @@
                 android:textSize="50sp"
                 android:textStyle="bold"
                 android:id="@+id/displayBmi"
-                android:layout_marginRight="20dp"/>
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/teko_font"/>
         </androidx.cardview.widget.CardView>
 
         <TextView
@@ -56,7 +58,7 @@
             android:textColor="@color/white"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="150dp"
-            android:fontFamily="@font/josenfin_text"/>
+            android:fontFamily="@font/josenfin_font"/>
 
         <androidx.cardview.widget.CardView
             android:layout_marginTop="190dp"
@@ -72,10 +74,12 @@
                 android:text="@string/status_starter_value"
                 android:textColor="@color/white"
                 android:textAlignment="textEnd"
+                android:layout_marginTop="5dp"
                 android:textSize="50sp"
                 android:textStyle="bold"
                 android:id="@+id/displayStatus"
-                android:layout_marginEnd="20dp"/>
+                android:layout_marginEnd="20dp"
+                android:fontFamily="@font/teko_font"/>
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
@@ -94,7 +98,7 @@
             android:textSize="35sp"
             android:textStyle="bold"
             android:layout_marginStart="20dp"
-            android:fontFamily="@font/changa_text"/>
+            android:fontFamily="@font/changa_font"/>
 
         <androidx.cardview.widget.CardView
             android:layout_alignParentEnd="true"
@@ -110,10 +114,11 @@
                 android:text="@string/height_starter_value"
                 android:textColor="@color/white"
                 android:textAlignment="center"
-                android:textSize="40sp"
+                android:textSize="45sp"
                 android:layout_marginTop="5dp"
                 android:textStyle="bold"
-                android:id="@+id/display_height"/>
+                android:id="@+id/display_height"
+                android:fontFamily="@font/teko_font"/>
         </androidx.cardview.widget.CardView>
 
         <TextView
@@ -125,7 +130,7 @@
             android:textSize="35sp"
             android:textStyle="bold"
             android:layout_marginStart="20dp"
-            android:fontFamily="@font/changa_text"/>
+            android:fontFamily="@font/changa_font"/>
 
         <androidx.cardview.widget.CardView
             android:layout_alignParentEnd="true"
@@ -141,7 +146,8 @@
                 android:text="@string/weight_starter_value"
                 android:textColor="@color/white"
                 android:textAlignment="center"
-                android:textSize="40sp"
+                android:textSize="45sp"
+                android:fontFamily="@font/teko_font"
                 android:textStyle="bold"
                 android:layout_marginTop="5dp"
                 android:id="@+id/display_weight"/>
@@ -156,7 +162,7 @@
             android:textSize="35sp"
             android:textStyle="bold"
             android:layout_marginStart="20dp"
-            android:fontFamily="@font/changa_text"/>
+            android:fontFamily="@font/changa_font"/>
 
         <androidx.cardview.widget.CardView
             android:layout_alignParentEnd="true"
@@ -174,7 +180,8 @@
                 android:layout_marginTop="5dp"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="40sp"
+                android:textSize="45sp"
+                android:fontFamily="@font/teko_font"
                 android:textStyle="bold" />
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
@@ -184,13 +191,13 @@
         android:layout_width="280dp"
         android:layout_height="80dp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/lower_layout"
+        android:layout_alignParentBottom="true"
         android:text="@string/another_calculation_button"
         android:textSize="28sp"
         android:textStyle="bold"
-        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
         android:textAlignment="center"
         android:backgroundTint="#2D1447"
         android:textColor="@color/white"
-        android:fontFamily="@font/concertone_text"/>
+        android:fontFamily="@font/concertone_font"/>
 </RelativeLayout>
